# school2021

./: .gitignore  .gitmodules  404.html  README.md  environment.yml  index.html  index.json  index.xml  participants_logbook.md  sitemap.xml
.tex/: header_maxnoe.tex  tex-packages.txt
astropy/: .gitignore  README.md  astropy_hands_on.ipynb  astropy_hands_on_solutions.ipynb
categories/: index.html  index.xml
debugging/: debugging_handson.ipynb
debugging-profiling/: debug_fib.py  debugging.ipynb  fermi_demo.py  profiling.ipynb
deep-learning/: README.md  T0_ hands_on_preparation.ipynb  T1_fitting_sin_with_MLP.ipynb  T2_binary_classification_with_MLP.ipynb  T3_multiclass_classification_with_MLP.ipynb  T4_CIFAR10_classification_with_CNN.ipynb  T5_Cats_Dogs_classification_with_ResNet.ipynb
docs/: config.toml
gammapy/: gammapy-cta-gc.ipynb  gammapy-overview.ipynb
git/: Makefile  README.md  git.tex
gravitational_waves/: environment_gw.yml  hands_on_gw.ipynb
julia/: Live Session.ipynb
machine-learning-1/: Clustering-empty.ipynb  Clustering.ipynb  Dimensionality Reduction.ipynb  digits-dimred-classification.ipynb
machine-learning-2/: Regression.ipynb  Validation and Optimization.ipynb  notebook-as-presented.ipynb
machine-learning-supplement/: README.md
matplotlib/: Matplotlib Introduction.ipynb
matplotlib-publication-quality/: Makefile  README.md  matplotlib_header.tex  matplotlibrc_pgf  plot.py  plot_before.py  proceeding.tex  settings.tex
neutrinos/: README.md  csv_ANTARES_reading.ipynb  fullkm3_basic_analysis.ipynb  openkm3_VOservices.ipynb  openkm3_datalevel4.ipynb  openkm3_eventdata.ipynb  openkm3_openstore.ipynb  pyvo_multiple_experiments.ipynb  pyvo_simple_ANTARES_analysis.ipynb
numpy/: 1. NumPy Warming Up.ipynb  2. NumPy Exercises - Solutions.ipynb  2. NumPy Exercises.ipynb  3. Nearest Points.ipynb  4. Binary Data.ipynb  README.md
optimization-parallelization/: mpi.ipynb  multiprocessing.ipynb  (+1 more)
packaging/escape_school21_demo/: setup.cfg
packaging/escape_school21_demo/escape_school21_demo/: __main__.py
packaging/escape_school21_demo/escape_school21_demo/tests/: test_fibonacci.py
packaging/eschool21_demo/: README.md  pyproject.toml  setup.cfg
packaging/eschool21_demo/eschool21_demo/: __init__.py  fibonacci.py
packaging/eschool21_demo/eschool21_demo/tests/: test_fibonacci.py
packaging/eschool21_wheel_demo/: setup.cfg  setup.py
packaging/eschool21_wheel_demo/conda-recipe/: meta.yaml
packaging/eschool21_wheel_demo/eschool21_wheel_demo/: fibonacci.pyx
testing/fibonacci/: pyproject.toml  setup.cfg  setup.py
testing/fibonacci/docs/: fibonacci.rst
testing/fibonacci/fibonacci/: __init__.py
testing/fibonacci/fibonacci/tests/: test_fibonacci.py
(+342 files in other folders)
