[metadata]
name = escape_school21_demo
version = attr: escape_school21_demo.__version__
author = Maximilian Nöthe
author_email = maximilian.noethe@tu-dortmund.de
url = https://github.com/escape2020/school2021/
description = Example Package
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  # see https://pypi.org/classifiers/ for more
  License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.6
install_requires =
  numpy
  astropy >= 4

[options.extras_require]
tests =
  pytest
