[metadata]
name = eschool21_wheel_demo
version = attr: eschool21_wheel_demo.__version__
author = Maximilian Nöthe
author_email = maximilian.noethe@tu-dortmund.de
url = https://github.com/escape2020/school2021/
description = Example Package
license = MIT

[options]
packages = find:
python_requires = >=3.6