[metadata]
name = test_demo_fibonacci
version = 0.1.0
author = Maximilian Nöthe
author_email = maximilian.noethe@tu-dortmund.de
url = https://github.com/escape2020/school2021/
description = Example Package
license = MIT

[options]
packages = find:
python_requires = >=3.6

[options.extras_require]
tests =
  pytest
  pytest-cov
